fix: word wrap for pre tag

--- a/app/main.css
+++ b/app/main.css
@@ -7,3 +7,8 @@
 html {
   scrollbar-gutter: stable;
 }
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
